add candel stick api
